--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ $(document).ready(function() {
         url: 'https://api.gumroad.com/v2/products',
 
         dataType: 'json',
+        crossDomain: true,
         contentType: 'application/json',
         processData: false,
         data: '{ "access_token" : "14a3467317e2442a540fc679185524abfcd94f74807b19129bb57a6c8041b6ba" }',
